# smokem

./: .gitignore  CMakeLists.txt  CMakeSettings.json  imgui.ini
cmake/: dependencies.cmake  imgui.cmake
models/blender/: untitled.mtl
models/cube-simple/: cube-simple.mtl
models/revil/: resident-evil-racoon-city-party-girl.mtl
models/torch/: torch.mtl
shaders/: model.frag  model.vert  simple-model.frag
shaders/fluid/: advect.frag  buoyancy.frag  divergence.frag  fill.frag  fluid.vert  impulse.frag  jacobi.frag  pick-layer.gs  subtract-gradient.frag
shaders/light/: blur.frag  cache.frag
shaders/raycast/: raycast.frag  raycast.gs  raycast.vert
shaders/raycast/simple/: simple.frag  simple.gs  simple.vert
src/: camera.cpp  camera.h  fluid.cpp  fluid.h  main.cpp  model.h  object.cpp  object.h  shader.cpp  shader.h  shape.cpp  shape.h  smokem.cpp  smokem.h  tiny_obj_loader.cc  utility.cpp  utility.h
